# etg-mobile-service

./: .dockerignore  .gitignore  Dockerfile  README.md  protos
cpp/: CMakeLists.txt  Dockerfile  Makefile  README.md  database.cc  database.h  entry_data_service_impl.cc  entry_data_service_impl.h  etg_service_client.cc  etg_service_server.cc
csharp/: Auth.cs  AuthGrpc.cs  DataEntry.cs  DataEntryGrpc.cs  EntryDataGrpc.cs  EntryDataServiceImpl.cs  Makefile  Profile.cs  ProfileGrpc.cs  Program.cs  Service.cs  project.json
csharp/EtgService/: EtgService.sln  gen_protos.bat
csharp/EtgService-from-cli/: EtgService.sln  csharp.nuget.targets
csharp/EtgService-from-cli/EntryData/: EntryData.xproj  EntryDataServiceImpl.cs  project.json
csharp/EtgService-from-cli/EtgService/: EtgService.xproj  Program.cs  project.json
csharp/EtgService/DataAccess/: DataAccess.xproj  SqlHelper.cs
csharp/EtgService/EntryData/: EntryData.cs  EntryData.csproj  EntryDataExtensions.cs  EntryDataGrpc.cs  EntryDataServiceImpl.cs  EntryDataServiceOptions.cs  app.config  packages.config
csharp/EtgService/EtgService/: App.config  EtgService.cs  EtgService.csproj  Program.cs  appsettings.json  packages.config
go/: Makefile
go/entry_data/: entry_data.pb.go
go/server/: server.go
js/: companyprofile.js  loginreply.js  loginrequest.js  logintype.js  userprofile.js
objc/: Auth.pbobjc.h  Auth.pbobjc.m  Profile.pbobjc.h  Profile.pbobjc.m  Service.pbobjc.h  Service.pbobjc.m
protos/: auth.proto  data_entry.proto  entry_data.proto  profile.proto  service.proto
python/: Makefile  auth_pb2.py  data_entry_client.py  database.py  entry_data_client.py  entry_data_pb2.py  etg_service_client.py  etg_service_server.py  profile_pb2.py  requirements.txt  run_codegen.py
(+23 files in other folders)
